--- a/Stok_Takip/Stok_Takip.csproj
+++ b/Stok_Takip/Stok_Takip.csproj
@@ -146,6 +146,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="uretim\uretim.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="uretim\uretim.Designer.cs">
+      <DependentUpon>uretim.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Giris.resx">
       <DependentUpon>Giris.cs</DependentUpon>
     </EmbeddedResource>
@@ -172,6 +178,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="uretim\uretim.resx">
+      <DependentUpon>uretim.cs</DependentUpon>
+    </EmbeddedResource>
     <EntityDeploy Include="Modul_Sttok\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
