--- a/Stok_Takip/App.config
+++ b/Stok_Takip/App.config
@@ -8,13 +8,12 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-      <add name="Model1" connectionString="data source=DESKTOP-TNVMV0L\YASIN;initial catalog=MayaStok;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
-          providerName="System.Data.SqlClient" />
-      <add name="MayaStokEntities" connectionString="metadata=res://*/Modul_Sttok.Model1.csdl|res://*/Modul_Sttok.Model1.ssdl|res://*/Modul_Sttok.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TNVMV0L\YASIN;initial catalog=MayaStok;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-          providerName="System.Data.EntityClient" />
-      <add name="Stok_Takip.Properties.Settings.MayaStokConnectionString"
-          connectionString="Data Source=DESKTOP-TNVMV0L\YASIN;Initial Catalog=MayaStok;Integrated Security=True"
-          providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=DESKTOP-TNVMV0L\YASIN;initial catalog=MayaStok;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="MayaStokEntities" connectionString="metadata=res://*/Modul_Sttok.Model1.csdl|res://*/Modul_Sttok.Model1.ssdl|res://*/Modul_Sttok.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TNVMV0L\YASIN;initial catalog=MayaStok;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="MayaStokEntities1" connectionString="metadata=res://*/Modul_Sttok.Model1.csdl|res://*/Modul_Sttok.Model1.ssdl|res://*/Modul_Sttok.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TNVMV0L\YASIN;initial catalog=MayaStok;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
