--- a/Stok_Takip/Stok_Takip.csproj
+++ b/Stok_Takip/Stok_Takip.csproj
@@ -109,6 +109,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MayaStokDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="MayaStokDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MayaStokDataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Modul_Sttok\HazirUrunler.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -160,6 +165,9 @@
     <Compile Include="Modul_Sttok\Tur.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Modul_Sttok\UretimBilgi.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Modul_Sttok\Urunler.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -173,17 +181,35 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="siparis.cs">
+    <Compile Include="SifreForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="siparis.Designer.cs">
+    <Compile Include="SifreForm.Designer.cs">
+      <DependentUpon>SifreForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Siparis\siparis.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Siparis\siparis.Designer.cs">
       <DependentUpon>siparis.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Siparis\Siparis_Durum.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Siparis\Siparis_Durum.Designer.cs">
+      <DependentUpon>Siparis_Durum.cs</DependentUpon>
     </Compile>
     <Compile Include="uretim\uretim.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="uretim\uretim.Designer.cs">
       <DependentUpon>uretim.cs</DependentUpon>
+    </Compile>
+    <Compile Include="uretim\UretimMakina.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="uretim\UretimMakina.Designer.cs">
+      <DependentUpon>UretimMakina.cs</DependentUpon>
     </Compile>
     <Compile Include="XRDesignRibbonControllerResources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -220,11 +246,20 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="siparis.resx">
+    <EmbeddedResource Include="SifreForm.resx">
+      <DependentUpon>SifreForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Siparis\siparis.resx">
       <DependentUpon>siparis.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Siparis\Siparis_Durum.resx">
+      <DependentUpon>Siparis_Durum.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="uretim\uretim.resx">
       <DependentUpon>uretim.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="uretim\UretimMakina.resx">
+      <DependentUpon>UretimMakina.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="XRDesignRibbonControllerResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -244,6 +279,17 @@
     </None>
     <None Include="MayaStokDataSet.xss">
       <DependentUpon>MayaStokDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="MayaStokDataSet1.xsc">
+      <DependentUpon>MayaStokDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="MayaStokDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>MayaStokDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="MayaStokDataSet1.xss">
+      <DependentUpon>MayaStokDataSet1.xsd</DependentUpon>
     </None>
     <None Include="Modul_Sttok\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
@@ -271,9 +317,7 @@
   <ItemGroup>
     <None Include="Resources\GİRİS.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Siparis\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\temizle.png" />
   </ItemGroup>
