--- a/Stok_Takip/Stok_Takip.csproj
+++ b/Stok_Takip/Stok_Takip.csproj
@@ -173,6 +173,9 @@
     <Compile Include="Modul_Sttok\Tur.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Modul_Sttok\UretilenUrun.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Modul_Sttok\UretimBilgi.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -347,7 +350,9 @@
   <ItemGroup>
     <None Include="Resources\GİRİS.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Hazir\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\temizle.png" />
   </ItemGroup>
